2012-04-18 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-54
	* Use TNS connections to export configurations. 

2012-04-16 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-53
	* fix small bug in re-labelling prescaler instance based on path name

2012-04-16 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-52
	* Fix nullPointerException in Search&Replace tool.
	* Record elapsed time for last opened configuration.

2012-04-15 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-51
	* simplifications and bug fixes, eps. IGNORE/NEGATE within sequences no longer lost on IMPORT
	
2012-04-14 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-50
	* Remove restriction in the GUI to allow share a path in two datasets in the same stream.
	- This feature works with the current database definition.
	- it only gives an error if you explicitly share a path in two datasets, and the database has no the update.  

2012-04-14 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-49
	* Introduces load balancing URLs for the browser.
	* Add multiple hosts at confdb.properties using comma-separator.

2012-04-14 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-48
	* Fix browser reader accounts. (Andrea).

2012-04-13 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-47
	* reconnect method retries automatically several times before raising a DatabaseException.
	   
2012-04-11 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-46
	* Allow load balancing connections by using comma-separated host names.
	
2012-04-11 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-45
	* added prescale columns can be filled with user-provided value.
	
2012-04-11 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-44
	* Set a timeout of 3 seconds for version checker.
